# analysis-kit

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh  requirements-dev.txt
.github/workflows/: ci.yml
bootstrap/: INSTALL.md  check-must-customize.sh  install-skills.sh  new-project.sh
docs/: CONCEPTS.md  COUNTERFACTUAL_TAGGING.md  HOOKS_GUIDE.md  PHILOSOPHY.md  PROVENANCE_CONTRACT.md  REBUILD_PIPELINE.md  USER_GUIDE.md
skills/: akit-fill.md  akit-finding.md  akit-next.md  akit-start.md  akit.md
templates/: .gitignore  CHEAT_SHEET.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  _quarto.yml  analysis-kit.json  requirements.txt
templates/.claude/: settings.json
templates/.claude/hooks/: block-unvalidated-commit.sh  findings-coverage-on-edit.sh  validate-on-stop.sh
templates/.github/workflows/: trust-contract.yml
templates/analysis/: 01_inspect_raw.py  02_profile.py  _decisions.py  _findings.py  _provenance.py  report.py  schemas.py  validate.py
templates/live-docs/: ANALYSIS_BACKLOG.md  DATA_PROFILE.md  DECISIONS.md  METHODOLOGY_LOG.md  TOOLING.md  TRUST_MEMO.md
templates/memory/: MEMORY.md  analysis_framework.md  data_quality_caveats.md  project_overview.md  stakeholder_stance.md
templates/reference/: README.md
templates/reference/raw-data/: README.md
templates/vignettes/: 00_template.qmd
tests/: conftest.py  test_bootstrap.py  test_findings_helper.py  test_grounding.py  test_hooks.py  test_report.py  test_validate.py
tests/fixtures/synthetic/: README.md  sessions.csv
