[project]
name = "analysis-kit"
version = "0.1.0"
description = "Scaffolding for agentic data-analysis projects with Claude Code as the operator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pandera>=0.20",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
