[project]
name = "analysis-kit"
version = "0.3.0"
description = "Scaffolding for agentic data-analysis projects with Claude Code as the operator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

# Loose bounds for downstream consumers — declares "we work with these or newer".
# For an exact reproducible dev environment, use .devcontainer/requirements-dev.txt
# (verified-working pins).
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pandera>=0.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This repo ships no Python modules — it's a bash-based scaffolding kit.
# `pip install -e .` exists only to make the project name/version resolvable
# and to activate the [project.optional-dependencies] extras. bypass-selection
# tells hatchling to skip its package auto-discovery (which would fail looking
# for an `analysis_kit/` directory that doesn't exist).
[tool.hatch.build.targets.wheel]
bypass-selection = true
